# GraspService

./: .gitignore  README.md
src/grasp_srv/: CMakeLists.txt  package.xml
src/grasp_srv/cfg/: eigen_params.cfg  hand_geometry.cfg  params.cfg
src/grasp_srv/data/a_cups/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/a_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/a_lego_duplo/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/a_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/a_toy_airplane/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/a_toy_airplane/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/adjustable_wrench/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/adjustable_wrench/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/b_cups/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/b_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/b_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/b_toy_airplane/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/b_toy_airplane/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/banana/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/banana/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/bear_stationery_box/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/bleach_cleanser/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/bleach_cleanser/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/blue_moon/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/bowl/meshes/: textured.pcd
src/grasp_srv/data/bowl/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/bowl_a/meshes/: grasp.bag  textured.pcd
src/grasp_srv/data/bowl_a/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/c_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/c_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/c_toy_airplane/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/cleanser/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/cocacola1/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/conditioner/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/correction_fuid/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/cracker_box/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/cup_small/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/d_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/d_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/d_toy_airplane/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/doraemon_bowl/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/doraemon_cup/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/doraemon_spoon/visual_meshes/: cloud.pcd  cloud.ply
src/grasp_srv/data/e_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/e_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/e_toy_airplane/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/elephant/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/extra_large_clamp/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/f_cups/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/f_lego_duplo/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/feng_tea_box/visual_meshes/: cloud.pcd  visual.mtl
src/grasp_srv/data/flat_screwdriver/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/data/foam_brick/visual_meshes/: cloud.pcd  cloud.ply  visual.dae
src/grasp_srv/grasp_data/: README.md  grasp_mode.json  grasp_mode_back.json  grasp_mode_bk.json  object_id.json
src/grasp_srv/grasp_data/a_cups/: pose.json  type.json
src/grasp_srv/grasp_data/a_lego_duplo/: pose.json
src/grasp_srv/grasp_data/bowl/: pose.json
src/grasp_srv/grasp_data/bowl_a/: pose.json
src/grasp_srv/grasp_data/doraemon_bowl/: pose.json
src/grasp_srv/grasp_data/green_arrow/: pose.json
src/grasp_srv/grasp_data/hello_kitty_bowl/: pose.json
src/grasp_srv/grasp_data/pepsi/: pose.json  type.json
src/grasp_srv/grasp_data/rabbit_bowl/: pose.json
src/grasp_srv/grasp_data/wooden_boat_bowl/: pose.json
src/grasp_srv/grasp_data/wooden_cup/: pose.json
src/grasp_srv/grasp_data/wooden_cup1/: pose.json
src/grasp_srv/grasp_data/wooden_cup2/: pose.json
src/grasp_srv/grasp_data/wooden_cup3/: pose.json
src/grasp_srv/grasp_data/wooden_square_bowl/: pose.json
src/grasp_srv/grasp_data/zebra/: pose.json
src/grasp_srv/include/: geometry_grasp.hpp  grasp_gen_client.hpp  json_tools.h
src/grasp_srv/include/gpd/: grasp_detector.h
src/grasp_srv/include/gpg/: antipodal.h  candidates_generator.h  cloud_camera.h  plot.h
src/grasp_srv/launch/: grasp_gen.launch  grasp_select.launch  model_test.launch  ocrtoc_merge.launch  scene_test.launch
src/grasp_srv/msg/: Configuration1D.msg  GlobalGraspPose.msg  Grasp.msg  GraspPose.msg  Grasps.msg  Label.msg  ObjectPoses.msg  SaveGrasp.msg
src/grasp_srv/scripts/: grasp_test.py  gripper_test.py  gripper_transfer.py  gripper_visualization.py  load_scene.py  parse.py  parse_scene.py  robot_kinematics_render.py  test_ikpy.py  type_gen.py  type_parse.py  waypoints_generate.py
src/grasp_srv/src/: detect_grasps.cpp  generate_candidates.cpp  geometry_grasp.cpp  grasp_gen_client.cpp  grasp_gen_server.cpp  render_object.cpp  render_scene.cpp
src/grasp_srv/src/gpd/: grasp_detector.cpp
src/grasp_srv/src/gpg/: candidates_generator.cpp  cloud_camera.cpp  plot.cpp
src/grasp_srv/srv/: GraspGen.srv
src/visualizer/: CMakeLists.txt  grasp.rviz  package.xml
src/visualizer/src/: grasp_main.cpp  grasp_visualizer.cpp  grasp_visualizer.h  main.cpp  scene_main.cpp  scene_visualizer.cpp  scene_visualizer.h  visualizer.cpp  visualizer.h
(+156 files in other folders)
