<package>
  <name>grasp_visualizer</name>
  <version>0.0.1</version>
  <description>
     Visualization on Articulation Reconstruction
  </description>
  <maintainer email="chnme40cs@gmail.com">HaonanChang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
</package>