<package format="2">
  <name>grasp_visualizer</name>
  <version>0.0.1</version>
  <description>
     Visualization on Articulation Reconstruction
  </description>
  <maintainer email="chnme40cs@gmail.com">HaonanChang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>grasp_srv</build_depend>
  <build_export_depend>grasp_srv</build_export_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>grasp_srv</exec_depend>
</package>